sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:4: error: '=' expected but ';' found.
   var lgr = 0
^